# zkp-covid-tracker

./: .gitignore  .gitmodules  LICENSE.txt  README.MD
backend/: .env.example  README.md  nodemon.json  package-lock.json  package.json
backend/assets/: cli  proving.key  verification.key
backend/src/: app.js  utils.js
contracts/: verification.sol
frontend/: .babelrc.js  .env  .env.example  README.md  jsconfig.json  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  Store.js  api.js  index.css  index.js  routes.js  state.js  styles.js  tonclient.js  utils.js
frontend/src/components/: EventLayer.js  MainLayout.js  MapBox.js  ProofView.js  Rectangle.js  VerifyView.js
frontend/src/theme/: index.js
zkp/: CMakeLists.txt  README.md
zkp/test/: CMakeLists.txt  circuit_test.cpp
